--- a/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/manifest.json
+++ b/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/manifest.json
@@ -1,6 +1,6 @@
 {
 	"Name": "iGoX BusyLight",
-	"Version": "0.1.0.0",
+	"Version": "0.2.0.0",
 	"Author": "iGoX",
 	"$schema": "https://schemas.elgato.com/streamdeck/plugins/manifest.json",
 	"Actions": [
@@ -51,8 +51,7 @@
 					"TitleAlignment": "bottom"
 				}
 			]
-		}
-		,
+		},
 		{
 			"Name": "Turn off the BusyLight",
 			"UUID": "org.igox.busylight.status.off",
@@ -73,7 +72,7 @@
 			"Name": "Set brightness",
 			"UUID": "org.igox.busylight.brigthness.set",
 			"Icon": "imgs/actions/brightness/brightness",
-			"Tooltip": "Set brightness",
+			"Tooltip": "Set LED brightness",
 			"PropertyInspectorPath": "ui/brightness-config.html",
 			"Controllers": [
 				"Keypad"
@@ -81,6 +80,22 @@
 			"States": [
 				{
 					"Image": "imgs/actions/brightness/brightness",
+					"TitleAlignment": "bottom"
+				}
+			]
+		},
+		{
+			"Name": "Set color",
+			"UUID": "org.igox.busylight.color.set",
+			"Icon": "imgs/actions/color/color",
+			"Tooltip": "Set BusyLight displayed color",
+			"PropertyInspectorPath": "ui/color-config.html",
+			"Controllers": [
+				"Keypad"
+			],
+			"States": [
+				{
+					"Image": "imgs/actions/color/color",
 					"TitleAlignment": "bottom"
 				}
 			]
