--- a/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/manifest.json
+++ b/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/manifest.json
@@ -1,69 +1,21 @@
 {
 	"Name": "iGoX BusyLight",
-	"Version": "0.2.0.0",
+	"Version": "0.3.0.0",
 	"Author": "iGoX",
 	"$schema": "https://schemas.elgato.com/streamdeck/plugins/manifest.json",
 	"Actions": [
 		{
-			"Name": "Set status as 'Available'",
-			"UUID": "org.igox.busylight.status.available",
-			"Icon": "imgs/actions/status/available/available",
-			"Tooltip": "Set status as 'Available'",
+			"Name": "Set BusyLight status",
+			"UUID": "org.igox.busylight.status.set",
+			"Icon": "imgs/actions/icons/status/status",
+			"Tooltip": "Set BusyLight status",
 			"PropertyInspectorPath": "ui/status-config.html",
 			"Controllers": [
 				"Keypad"
 			],
 			"States": [
 				{
-					"Image": "imgs/actions/status/available/available",
-					"TitleAlignment": "bottom"
-				}
-			]
-		},
-		{
-			"Name": "Set status as 'Away'",
-			"UUID": "org.igox.busylight.status.away",
-			"Icon": "imgs/actions/status/away/away",
-			"Tooltip": "Set status as 'Away'",
-			"PropertyInspectorPath": "ui/status-config.html",
-			"Controllers": [
-				"Keypad"
-			],
-			"States": [
-				{
-					"Image": "imgs/actions/status/away/away",
-					"TitleAlignment": "bottom"
-				}
-			]
-		},
-		{
-			"Name": "Set status as 'Busy'",
-			"UUID": "org.igox.busylight.status.busy",
-			"Icon": "imgs/actions/status/busy/busy",
-			"Tooltip": "Set status as 'Busy'",
-			"PropertyInspectorPath": "ui/status-config.html",
-			"Controllers": [
-				"Keypad"
-			],
-			"States": [
-				{
-					"Image": "imgs/actions/status/busy/busy",
-					"TitleAlignment": "bottom"
-				}
-			]
-		},
-		{
-			"Name": "Turn off the BusyLight",
-			"UUID": "org.igox.busylight.status.off",
-			"Icon": "imgs/actions/status/off/off",
-			"Tooltip": "Turn off the BusyLight",
-			"PropertyInspectorPath": "ui/status-config.html",
-			"Controllers": [
-				"Keypad"
-			],
-			"States": [
-				{
-					"Image": "imgs/actions/status/off/off",
+					"Image": "imgs/actions/icons/status/status",
 					"TitleAlignment": "bottom"
 				}
 			]
@@ -71,7 +23,7 @@
 		{
 			"Name": "Set brightness",
 			"UUID": "org.igox.busylight.brigthness.set",
-			"Icon": "imgs/actions/brightness/brightness",
+			"Icon": "imgs/actions/icons/brightness/brightness",
 			"Tooltip": "Set LED brightness",
 			"PropertyInspectorPath": "ui/brightness-config.html",
 			"Controllers": [
@@ -79,7 +31,7 @@
 			],
 			"States": [
 				{
-					"Image": "imgs/actions/brightness/brightness",
+					"Image": "imgs/actions/icons/brightness/brightness",
 					"TitleAlignment": "bottom"
 				}
 			]
@@ -87,7 +39,7 @@
 		{
 			"Name": "Set color",
 			"UUID": "org.igox.busylight.color.set",
-			"Icon": "imgs/actions/color/color",
+			"Icon": "imgs/actions/icons/color/color",
 			"Tooltip": "Set BusyLight displayed color",
 			"PropertyInspectorPath": "ui/color-config.html",
 			"Controllers": [
@@ -95,17 +47,17 @@
 			],
 			"States": [
 				{
-					"Image": "imgs/actions/color/color",
+					"Image": "imgs/actions/icons/color/color",
 					"TitleAlignment": "bottom"
 				}
 			]
 		}
 	],
 	"Category": "iGoX BusyLight",
-	"CategoryIcon": "imgs/plugin/marketplace",
+	"CategoryIcon": "imgs/plugin/category",
 	"CodePath": "bin/plugin.js",
 	"Description": "Control your DIY BusyLight (https://github.com/igox/busylight) from your Stream Deck",
-	"Icon": "imgs/plugin/marketplace",
+	"Icon": "imgs/plugin/category",
 	"SDKVersion": 2,
 	"Software": {
 		"MinimumVersion": "6.4"
